fix style bug of lineGap.

--- a/src/components/VerticalStepsList/index.scss
+++ b/src/components/VerticalStepsList/index.scss
@@ -1,9 +1,16 @@
 .vsl-list {
+    .node {
+        height: 1em;
+        display: flex;
+        justify-content: space-between;
+    }
+
     .marker {
         display: inline-block;
         display: flex;
         align-items: center;
         justify-content: center;
+        width: 2em;
 
         .circle-marker {
             width: 1em;
@@ -16,15 +23,14 @@
         & > * {
             width: 1em;
             height: 1em;
-            margin: 0 0.25em;
         }
 
     }
 
     label {
-        display: flex;
+        display: inline-flex;
         align-items: center;
-        height: 1em;
+        margin: .25em 0;
 
         & > span {
             margin: 0 .25em;
@@ -44,25 +50,20 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            width: 2em;
 
             & * {
                 width: 1em;
                 height: 1em;
-                margin: 0 0.25em;
             }
         }
     }
 
     .default-checkbox {
-        box-sizing: border-box;
         border: 1px solid #333;
         width: 1em;
         height: 1em;
         margin: 0 0.25em;
-    }
-
-    .node .meta {
-        float: right;
     }
 
     .children {
@@ -72,6 +73,10 @@
             width: 2em;
             height: auto;
         }
+
+        div > div {
+            margin: .25em 0;
+        }
     }
 
     .done.children {
@@ -80,7 +85,7 @@
 
     .line {
         height: 1em;
-        margin-left: calc(0.75em - 0.5px);
+        margin-left: calc(1em - 0.5px);
         border-left: 1px solid #000;
     }
 
